Bug 161969 - when plasma crashes, systray applet puts it's icons displaced horizontally
Summary: when plasma crashes, systray applet puts it's icons displaced horizontally
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-11 22:27 UTC by manolis
Modified: 2008-06-30 21:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The problem demonstrated (7.73 KB, image/jpeg)
2008-05-11 22:29 UTC, manolis
Details
systary 1 (13.00 KB, image/png)
2008-06-30 12:14 UTC, Ladislav Nesnera
Details
systray 2 (120.41 KB, image/png)
2008-06-30 12:16 UTC, Ladislav Nesnera
Details

Note You need to log in before you can comment on or make changes to this bug.
Description manolis 2008-05-11 22:27:22 UTC
Version:            (using Devel)
Installed from:    Compiled sources
Compiler:          gcc 
OS:                Linux

when plasma crashes, systray applet puts it's icons  displaced horizontally in such way that overlay themshelves over device notifier and clock.
Comment 1 manolis 2008-05-11 22:29:33 UTC
Created attachment 24724 [details]
The problem demonstrated
Comment 2 Jason Stubbs 2008-05-25 10:57:22 UTC
Patch on the review board (http://reviewboard.vidsolbach.de/dashboard/)
Comment 3 Jason Stubbs 2008-05-25 17:40:59 UTC
SVN commit 812493 by jstubbs:

geometry() isn't up to date at the time that an ItemPositionHasChanged
notification is received, so don't use it in calculating the correct
position. Also some other small WoC cleanups.

BUG: 161969


 M  +2 -6      libs/plasma/applet.cpp  
 M  +15 -13    plasma/applets/systemtray/systemtray.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=812493
Comment 4 Ladislav Nesnera 2008-06-30 12:13:29 UTC
I have a problem with overlapping in systray still. I'm using my notebook standalone or in dual head mode and my systary looks as showed in attachments.
Can you reopen this bug?
Comment 5 Ladislav Nesnera 2008-06-30 12:14:55 UTC
Created attachment 25728 [details]
systary 1
Comment 6 Ladislav Nesnera 2008-06-30 12:16:57 UTC
Created attachment 25729 [details]
systray 2

Qt: 4.4.0
KDE: 4.00.84 (KDE 4.0.84 (KDE 4.1 >= 20080625) "release 1.1"
openSUSE 11 64-bit
Comment 7 Sebastian Sauer 2008-06-30 21:36:47 UTC
Hi Ladislav, looks as your case is a duplicate of bug #165226 since the trayicons are not overlapping each other trayicon like this report was about but are overlapping e.g. the taskbar/clock what the other report is about ;)