geometry() isn't up to date at the time that an ItemPositionHasChanged notification is received, so don't use it in calculating the correct position. Also some other small WoC cleanups.

BUG: 161969

svn path=/trunk/KDE/kdebase/workspace/libs/plasma/; revision=812493